# sapphire

./: README.md  rename.py
futari-server/: CHANGELOG.md  Cargo.toml
futari-server/crates/futari_server/src/service/auth/: login.rs
futari-server/crates/futari_server/src/service/oauth/: complete_signup.rs
sapphire-server/crates/sapphire_config/: Cargo.toml
sapphire-server/crates/sapphire_config/src/: lib.rs  server_config.rs
sapphire-server/crates/sapphire_constants/: Cargo.toml
sapphire-server/crates/sapphire_constants/src/: action_log_actions.rs  lib.rs  moderation_actions.rs  nats_subjects.rs  storage_keys.rs  user_preference_keys.rs
sapphire-server/crates/sapphire_constants/src/cache_keys/: auth.rs  mod.rs
sapphire-server/crates/sapphire_dto/: Cargo.toml
sapphire-server/crates/sapphire_dto/src/: lib.rs  pagination.rs
sapphire-server/crates/sapphire_dto/src/action_logs/request/: get_action_logs.rs  mod.rs  stream_actions.rs
sapphire-server/crates/sapphire_dto/src/action_logs/response/: action_log.rs  action_log_list.rs  mod.rs
sapphire-server/crates/sapphire_dto/src/auth/request/: change_email.rs  change_password.rs  complete_signup.rs  confirm_email_change.rs  forgot_password.rs  login.rs  mod.rs  resend_verification_email.rs  reset_password.rs  totp_disable.rs  totp_enable.rs  totp_regenerate_backup_codes.rs  totp_verify.rs  verify_email.rs
sapphire-server/crates/sapphire_dto/src/auth/response/: login.rs  logout.rs  mod.rs  totp_backup_codes.rs  totp_enable.rs  totp_required.rs  totp_setup.rs  totp_status.rs
sapphire-server/crates/sapphire_dto/src/moderation/: mod.rs
sapphire-server/crates/sapphire_dto/src/moderation/request/: list_logs.rs  mod.rs  reindex.rs
sapphire-server/crates/sapphire_dto/src/moderation/response/: list_logs.rs  mod.rs  reindex.rs
sapphire-server/crates/sapphire_dto/src/oauth/internal/: mod.rs  sign_in_result.rs
sapphire-server/crates/sapphire_dto/src/oauth/request/: authorize.rs  github.rs  google.rs  link.rs  mod.rs  unlink.rs
sapphire-server/crates/sapphire_dto/src/oauth/response/: mod.rs  oauth_connection.rs  oauth_url.rs  sign_in.rs
sapphire-server/crates/sapphire_dto/src/search/: mod.rs
sapphire-server/crates/sapphire_dto/src/search/request/: mod.rs  users.rs
sapphire-server/crates/sapphire_dto/src/search/response/: mod.rs  users.rs
sapphire-server/crates/sapphire_dto/src/user/: mod.rs
sapphire-server/crates/sapphire_dto/src/user/request/: ban_user.rs  check_handle_available.rs  create_user.rs  get_revision_contributions.rs  get_user_profile.rs  get_user_profile_by_id.rs  grant_role.rs  mod.rs  revoke_role.rs  unban_user.rs  update_my_profile.rs  upload_user_image.rs
sapphire-server/crates/sapphire_dto/src/user/response/: ban_user.rs  check_handle_available.rs  create_user.rs  grant_role.rs  mod.rs  public_user_profile.rs  revision_contributions.rs  revoke_role.rs  unban_user.rs  upload_user_image.rs  user_profile.rs
sapphire-server/crates/sapphire_dto/src/user_preferences/: mod.rs
sapphire-server/crates/sapphire_dto/src/user_preferences/request/: mod.rs  preference.rs
sapphire-server/crates/sapphire_dto/src/user_preferences/response/: mod.rs  preference.rs
sapphire-server/crates/sapphire_dto/src/validator/: datetime_validator.rs  json_validator.rs  mod.rs  multipart_validator.rs  path_validator.rs  query_validator.rs  string_validator.rs
sapphire-server/crates/sapphire_entity/: Cargo.toml
sapphire-server/crates/sapphire_entity/src/: action_logs.rs  comments.rs  lib.rs  moderation_logs.rs  posts.rs  user_bans.rs  user_oauth_connections.rs  user_preferences.rs  user_roles.rs  users.rs
sapphire-server/crates/sapphire_entity/src/common/: mod.rs  oauth_provider.rs  role.rs
sapphire-server/crates/sapphire_errors/: Cargo.toml
sapphire-server/crates/sapphire_errors/src/: errors.rs  lib.rs  protocol.rs
sapphire-server/crates/sapphire_errors/src/handlers/: email_handler.rs  eventstream_handler.rs  file_handler.rs  general_handler.rs  meilisearch_handler.rs  mod.rs  oauth_handler.rs  password_handler.rs  rate_limit_handler.rs  report_handler.rs  session_handler.rs  system_handler.rs  token_handler.rs  totp_handler.rs  turnstile_handler.rs  user_handler.rs  worker_handler.rs
sapphire-server/crates/sapphire_server/: Cargo.toml
sapphire-server/crates/sapphire_server/src/: lib.rs  main.rs  state.rs
sapphire-server/crates/sapphire_server/src/api/: mod.rs  openapi.rs  routes.rs
sapphire-server/crates/sapphire_server/src/bridge/: mod.rs  turnstile_client.rs
sapphire-server/crates/sapphire_server/src/connection/: database_conn.rs  http_conn.rs  meilisearch_conn.rs  mod.rs  r2_assets_conn.rs  redis_conn.rs
sapphire-server/crates/sapphire_server/src/eventstream/: publisher.rs  subscriber.rs
sapphire-server/crates/sapphire_server/src/extractors/: mod.rs  session.rs  turnstile.rs
sapphire-server/crates/sapphire_server/src/middleware/: anonymous_user.rs  cors.rs  mod.rs  rate_limit.rs  stability.rs  trace_layer_config.rs
sapphire-server/crates/sapphire_server/src/permission/: mod.rs  permission_service.rs
sapphire-server/crates/sapphire_server/src/repository/: common.rs  mod.rs
sapphire-server/crates/sapphire_server/src/service/: cursor_pagination.rs  mod.rs
sapphire-server/crates/sapphire_server/src/utils/: logger.rs  mod.rs  r2_url.rs  redis_cache.rs  uuid.rs
sapphire-server/crates/sapphire_worker/: Cargo.toml
sapphire-server/crates/sapphire_worker/src/: lib.rs  main.rs
sapphire-server/crates/sapphire_worker/src/clients/: mail.rs  meilisearch.rs  mod.rs
sapphire-server/crates/sapphire_worker/src/config/: mod.rs  worker_config.rs
sapphire-server/crates/sapphire_worker/src/connection/: database_conn.rs  mod.rs  r2_assets_conn.rs
sapphire-server/crates/sapphire_worker/src/jobs/: mod.rs
sapphire-server/crates/sapphire_worker/src/nats/: consumer.rs  mod.rs  publisher.rs  streams.rs
sapphire-server/crates/sapphire_worker/src/templates/: email_change.mjml  email_verification.mjml  mod.rs  reset_password.mjml
sapphire-server/crates/sapphire_worker/src/utils/: logger.rs
(+291 files in other folders)
