[package]
name = "sapphire_config"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
description = "sapphire_config"

[dependencies]
axum = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
