[package]
name = "sapphire_constants"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version .workspace = true
license.workspace = true
description = "constants"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
