[package]
name = "sapphire_dto"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version .workspace = true
license.workspace = true
description = "sapphire_dto"

[dependencies]
# Internal crates
sapphire_config.workspace = true
sapphire_constants.workspace = true
sapphire_entity.workspace = true
sapphire_errors.workspace = true

# External dependencies
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v7", "serde"] }
validator = { workspace = true, features = ["derive"] }
sea-orm.workspace = true
utoipa.workspace = true
axum.workspace = true
axum-extra.workspace = true
cookie.workspace = true
serde_json.workspace = true
tracing.workspace = true