[package]
name = "sapphire_entity"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version .workspace = true
license.workspace = true
description = "sapphire_entity"

[lib]
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
serde.workspace = true
uuid.workspace = true
utoipa.workspace = true
